<resources>
    <string name="app_name">LoginAndSignup</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Registration Page</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
